--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram | Perfil de Viagens</title>
   <link rel="stylesheet" href="styles/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum molestiae est adipisci laudantium explicabo deleniti, sapiente odio sequi accusantium nisi consequatur doloribus commodi inventore voluptatem saepe aliquam eaque id quisquam.
+  </p>
 </body>
 </html>
