--- a/index.html
+++ b/index.html
@@ -10,9 +10,25 @@
   <link rel="stylesheet" href="styles/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum molestiae est adipisci laudantium explicabo deleniti, sapiente odio sequi accusantium nisi consequatur doloribus commodi inventore voluptatem saepe aliquam eaque id quisquam.
-  </p>
+<body><div class="bg-surface-color">
+  <nav class="container">
+    <a href="#" id="Logo">
+<img src="assets/Logo.svg" alt="Logo Travelgram">
+</a>
+<ul id="primary-menu">
+<li>
+  <a href="#">
+    <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de Lupa">
+  </a>
+</li>
+<li><a href="#">Explorer</a></li>
+<li><a href="#">Minhas viagens</a></li>
+<li><a href="#">
+  <img src="assets/Profile pic.png" alt="Imagem da Isabela">
+</a></li>
+</ul>
+  </nav>
+</div>
+<header></header>
 </body>
 </html>
