--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="styles/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body><div class="bg-surface-color">
+<body>
+  <div class="bg-surface-color">
   <nav class="container">
     <a href="#" id="Logo">
 <img src="assets/Logo.svg" alt="Logo Travelgram">
@@ -24,11 +25,35 @@
 <li><a href="#">Explorer</a></li>
 <li><a href="#">Minhas viagens</a></li>
 <li><a href="#">
-  <img src="assets/Profile pic.png" alt="Imagem da Isabela">
+  <img src="assets/Profile pic.png" alt="Imagem de Miniatura">
 </a></li>
 </ul>
   </nav>
-</div>
-<header></header>
+<header>
+<div class="container">
+  <div id="profile">
+    <img src="assets/Profile pic.png" alt="Imagem de Perfil">
+    <div>
+      <h1>Isabela Torres</h1>
+      <p>
+        Amante de viagens, cultura e gastronomia. 🌍✈️ <br> 
+        Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+        </p></div>
+  </div>
+  <ul id="info">
+<li>
+  <img src="assets/icons/MapPin.svg" alt="São Paulo">
+<span>São Paulo, Brazil</span>
+</li>
+<li>
+  <img src="assets/icons/AirplaneTilt.svg" alt="Países">
+<span>37 países</span>
+</li>
+<li>
+  <img src="assets/icons/Image.svg" alt="Fotos">
+<span>240 fotos</span>
+</li>
+  </ul>
+</header></div>
 </body>
 </html>
