--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
   <img src="assets/images/Image 07.png" alt="...">
   <img src="assets/images/Image 08.png" alt="...">
   <img src="assets/images/Image 09.png" alt="...">
+  <img src="assets/images/Image 10.png" alt="...">
+  <img src="assets/images/Image 11.png" alt="...">
+  <img src="assets/images/Image 12.png" alt="...">
 </main>
+<footer class="container">
+  <span>Travelgram &copy; 2024</span>
+  <span>Termo de Uso</span>
+  <span>Política de privacidade</span>
+</footer>
 </body>
 </html>
