--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <ul id="primary-menu">
 <li>
   <a href="#">
-    <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de Lupa">
+    <img class="icon-lupa" src="assets/icons/MagnifyingGlass.svg" alt="Ícone de Lupa">
   </a>
 </li>
-<li><a href="#">Explorer</a></li>
-<li><a href="#">Minhas viagens</a></li>
+<li><a class="mobileonly" href="#">Explorer</a></li>
+<li><a class="mobileonly" href="#">Minhas viagens</a></li>
 <li><a href="#">
   <img src="assets/Profile pic.png" alt="Imagem de Miniatura">
 </a></li>
